--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -26,9 +26,24 @@ services:
     depends_on:
       - elasticsearch
 
+  postgres:
+    image: postgres:latest
+    container_name: pg
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ipss_dev
+      POSTGRES_PASSWORD: ipss_pass
+      POSTGRES_DB: ipss_dev
+    ports:
+      - '5432:5432'
+    networks:
+      - api
+
 volumes:
   esdata:
   kbdata:
+  pgdata:
 
 networks:
   api:
