IPSS-42: Created API Route to Auth and Provide JWT

--- a/infopulse_api/Pipfile
+++ b/infopulse_api/Pipfile
@@ -8,6 +8,8 @@ fastapi = "*"
 requests = "*"
 sqlmodel = "*"
 pydantic = "*"
+pyjwt = "*"
+passlib = {extras = ["bcrypt"], version = "*"}
 
 [dev-packages]
 pytest = "*"
