IPSS-42: Committing Progress

--- a/infopulse_api/Pipfile
+++ b/infopulse_api/Pipfile
@@ -9,7 +9,9 @@ requests = "*"
 sqlmodel = "*"
 pydantic = "*"
 pyjwt = "*"
-passlib = {extras = ["bcrypt"], version = "*"}
+passlib = "*"
+psycopg2 = "*"
+bcrypt = "*"
 
 [dev-packages]
 pytest = "*"
