IPSS-17: Added article persistence with elasticsearch

--- a/infopulse_api/.env.TEMPLATE
+++ b/infopulse_api/.env.TEMPLATE
@@ -1,8 +1,18 @@
-# NewsAPI Key
 NEWS_API_KEY=""
-ELASTIC_SEARCH_PW=""
+ES_HOST=""
+ES_USERNAME=""
+ES_PW=""
+ES_API_KEY=""
 KIBANA_TOKEN=""
 SECRET_KEY=""
 ALGORITHM=""
 ACCESS_TOKEN_EXPIRE_MINUTES=0
 DATABASE_URL=""
+
+ES_API_KEY_JSON = {
+  "id": "",
+  "name": "",
+  "api_key": "",
+  "encoded": "",
+  "beats_logstash_format": ""
+}
